# pdf-builder

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/commands/: commit-code.md
pdf_builder/: __init__.py  document.py  exceptions.py
pdf_builder/components/: __init__.py  divider.py  heading.py  image.py  inline_text.py  line.py  link.py  multi_line_text.py  score_boxes.py  spacer.py  table.py  text.py  toc_item.py
pdf_builder/containers/: __init__.py  box.py  footer.py  page.py  row.py  section.py
pdf_builder/core/: __init__.py  component.py  container.py  context.py
pdf_builder/schemas/: __init__.py  inline_segment.py  multi_line_item.py  table_cell.py  table_config.py
pdf_builder/utils/: logger.py
